# services/user-service/docs/swagger.yaml
@@ -55,7 +55,7 @@ definitions:
       email:
         type: string
       first_name:
-        maxLength: 50
+        maxLength: 20
         type: string
       gender:
         type: string
@@ -180,6 +180,11 @@ definitions:
         type: string
       user:
         $ref: '#/definitions/dto.AuthUser'
+    type: object
+  dto.MobileSecretResponse:
+    properties:
+      secret:
+        type: string
     type: object
   dto.RefreshRequest:
     properties:
@@ -645,6 +650,33 @@ paths:
       summary: Register a new employee
       tags:
       - employees
+  /api/secret-mobile:
+    get:
+      description: Returns TOTP secret for currently authenticated client
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.MobileSecretResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.AppError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.AppError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.AppError'
+      security:
+      - BearerAuth: []
+      summary: Get mobile verification secret
+      tags:
+      - clients
 securityDefinitions:
   BearerAuth:
     description: 'Enter "Bearer" followed by a space and your token. Example: "Bearer
